ja-source/docusaurus-plugin-content-docs/version-2.1/sql-manual/sql-statements/cluster-management/instance-management/SHOW-FRONTENDS.md
---
{
  "title": "SHOW FRONTENDS",
  "language": "ja",
  "description": "このステートメントはFEノードの基本ステータス情報を表示するために使用されます。"
}
---
## 説明

このステートメントは、FEノードの基本的なステータス情報を表示するために使用されます。

## 構文

```sql
SHOW FRONTENDS
```
## 戻り値

| Column                      | Note                                                                                          |
|--------------------|-----------------------------------------------------------------------------------------------|
| Name               | Doris内の現在のFEの名前。この名前は通常、`fe`をプレフィックスとするランダムな文字列です。 |
| Host               | 現在のFEのIPアドレスまたはホスト名。                                                |
| EditLogPort        | 現在のFEのbdbje通信ポート。                                               |
| HttpPort           | 現在のFEのhttp通信ポート。                                                                             |
| QueryPort          | 現在のFEのMySQLプロトコル通信ポート。                                                                          |
| RpcPort            | 現在のFEのthrift RPC通信ポート。                                                                       |
| ArrowFlightSqlPort | 現在のFEのArrowFlightプロトコル通信ポート。                                                                    |
| Role               | 現在のFEのロール。可能な値はFOLLOWERとOBSERVERです。                                                           |
| IsMaster           | 現在のFEがMasterとして選出されているかどうか。                                                                           |
| ClusterId          | 現在のDorisクラスターのID、通常はランダムに生成された番号。                                                                  |
| Join               | 現在のFEノードが現在のDorisクラスターに正常に参加しているかどうかを示すために使用されます。                                                                 |
| Alive              | 現在のFEが生きているかどうか。                                                                                    |
| ReplayedJournalId  | 現在のFEがリプレイした最大のメタデータログのID。                                                                         |
| LastStartTime      | 現在のFEが開始されたときのタイムスタンプ。                                                                                  |
| LastHeartbeat      | 現在のFEによって送信された最後の成功したハートビートのタイムスタンプ。                                                                           |
| IsHelper           | 現在のFEがbdbjeのヘルパーノードかどうか。                                                                  |
| ErrMsg             | 現在のFEのハートビートが失敗した際のエラーメッセージ。                                                                              |
| Version            | 現在のFEのバージョン情報。                                                                                   |
| CurrentConnected   | 現在のクライアント接続が現在のFEノードに接続されているかどうか。                                                                          |

## アクセス制御要件

このSQLを実行するユーザーは、少なくとも以下の権限を持っている必要があります：

| Privilege  | Object | Notes |
|------------|----|----|
| ADMIN_PRIV |    |    |

## 使用上の注意

クエリ結果をさらにフィルタリングする必要がある場合は、テーブル値関数[frontends()](../../../sql-functions/table-valued-functions/frontends.md)を使用できます。SHOW FRONTENDSは以下のステートメントと同等です：

```sql
SELECT * FROM FRONTENDS();
```
## 例

```sql
SHOW FRONTENDS
```
```text
+-----------------------------------------+-----------+-------------+----------+-----------+---------+--------------------+----------+----------+-----------+------+-------+-------------------+---------------------+---------------------+----------+--------+-----------------------------+------------------+
| Name                                    | Host      | EditLogPort | HttpPort | QueryPort | RpcPort | ArrowFlightSqlPort | Role     | IsMaster | ClusterId | Join | Alive | ReplayedJournalId | LastStartTime       | LastHeartbeat       | IsHelper | ErrMsg | Version                     | CurrentConnected |
+-----------------------------------------+-----------+-------------+----------+-----------+---------+--------------------+----------+----------+-----------+------+-------+-------------------+---------------------+---------------------+----------+--------+-----------------------------+------------------+
| fe_65a0c6f0_b31f_42ac_bd20_26d851299f1a | 127.0.0.1 | 9010        | 8030     | 9030      | 9020    | 10030              | FOLLOWER | true     | 840241689 | true | true  | 302891            | 2025-01-20 02:11:39 | 2025-01-21 09:48:36 | true     |        | doris-2.1.7-rc03-443e87e203 | Yes              |
+-----------------------------------------+-----------+-------------+----------+-----------+---------+--------------------+----------+----------+-----------+------+-------+-------------------+---------------------+---------------------+----------+--------+-----------------------------+------------------+
```
