ja-source/docusaurus-plugin-content-docs/version-3.x/sql-manual/sql-statements/cluster-management/instance-management/SHOW-FRONTENDS.md
---
{
  "title": "SHOW FRONTENDS",
  "description": "このステートメントは、FEノードの基本的なステータス情報を表示するために使用されます。",
  "language": "ja"
}
---
## デスクリプション

このステートメントは、FEノードの基本的なステータス情報を表示するために使用されます。

## Syntax

```sql
SHOW FRONTENDS
```
## 戻り値

| カラム | 注記 |
|--------------------|-----------------------------------------------------------------------------------------------|
| Name | Doris における現在の FE の名前。この名前は通常、`fe` をプレフィックスとしたランダム文字列です。 |
| Host | 現在の FE の IP アドレスまたはホスト名。 |
| EditLogPort | 現在の FE の bdbje 通信ポート。 |
| HttpPort | 現在の FE の http 通信ポート。 |
| QueryPort | 現在の FE の MySQL プロトコル通信ポート。 |
| RpcPort | 現在の FE の thrift RPC 通信ポート。 |
| ArrowFlightSqlPort | 現在の FE の ArrowFlight プロトコル通信ポート。 |
| Role | 現在の FE の役割。可能な値は FOLLOWER と OBSERVER です。 |
| IsMaster | 現在の FE が Master として選出されているかどうか。 |
| ClusterId | 現在の Doris クラスターの ID。通常はランダムに生成された数値です。 |
| Join | 現在の FE ノードが現在の Doris クラスターに正常に参加したかどうかを示すために使用されます。 |
| Alive | 現在の FE が生きているかどうか。 |
| ReplayedJournalId | 現在の FE が再生した最大のメタデータログの ID。 |
| LastStartTime | 現在の FE が開始されたときのタイムスタンプ。 |
| LastHeartbeat | 現在の FE によって送信された最後の成功したハートビートのタイムスタンプ。 |
| IsHelper | 現在の FE が bdbje におけるヘルパーノードかどうか。 |
| ErrMsg | 現在の FE のハートビートが失敗したときのエラーメッセージ。 |
| Version | 現在の FE のバージョン情報。 |
| CurrentConnected | 現在のクライアント接続が現在の FE ノードに接続されているかどうか。 |

## アクセス制御要件

この SQL を実行するユーザーは、少なくとも以下の権限を持つ必要があります：

| 権限 | オブジェクト | 注記 |
|------------|----|----|
| SELECT_PRIV | internal.information_schema | すべてのユーザーはデフォルトでこのデータベースへの権限を持ちます |

## 使用上の注意

クエリ結果をさらにフィルタリングする必要がある場合は、Table値関数 [frontends()](../../../sql-functions/table-valued-functions/frontends.md) を使用できます。SHOW FRONTENDS は以下のステートメントと同等です：

```sql
SELECT * FROM FRONTENDS();
```
## 例

```sql
SHOW FRONTENDS
```
```text
+-----------------------------------------+-----------+-------------+----------+-----------+---------+--------------------+----------+----------+-----------+------+-------+-------------------+---------------------+---------------------+----------+--------+-----------------------------+------------------+
| Name                                    | Host      | EditLogPort | HttpPort | QueryPort | RpcPort | ArrowFlightSqlPort | Role     | IsMaster | ClusterId | Join | Alive | ReplayedJournalId | LastStartTime       | LastHeartbeat       | IsHelper | ErrMsg | Version                     | CurrentConnected |
+-----------------------------------------+-----------+-------------+----------+-----------+---------+--------------------+----------+----------+-----------+------+-------+-------------------+---------------------+---------------------+----------+--------+-----------------------------+------------------+
| fe_65a0c6f0_b31f_42ac_bd20_26d851299f1a | 127.0.0.1 | 9010        | 8030     | 9030      | 9020    | 10030              | FOLLOWER | true     | 840241689 | true | true  | 302891            | 2025-01-20 02:11:39 | 2025-01-21 09:48:36 | true     |        | doris-2.1.7-rc03-443e87e203 | Yes              |
+-----------------------------------------+-----------+-------------+----------+-----------+---------+--------------------+----------+----------+-----------+------+-------+-------------------+---------------------+---------------------+----------+--------+-----------------------------+------------------+
```
